@@ -12,6 +12,7 @@
 
 #include "Particle.h"
 #include "Detectors.h"
+#include "TVector3.h"
 
 class TrackTool
 {
@@ -29,20 +30,38 @@ class TrackTool
   // middle point method
   void EfieldZHSStyle(std::vector<Particle*> parts,  // input particles
 		      Detectors* dets,               // detectors
-		      float tOffset);                // time offset
+		      double t0);                    // Start time
 
  private:
-  
+
+  // EField calculation
+  double Efield(TVector3* beta,                      // Beta of electron
+		TVector3* u,                         // unit vector pointing towards det
+		TVector3* detPol,                    // Detectors polarization vector
+		double R);                           // Distance to detector
+
   // Get the time at the detector
   double getTDetector(TVector3* beta,                // Beta of electron 
 		      TVector3* u,                   // unit vector pointing toward detector
-		      double t);                     // Particle time
-  
+		      double R,                      // Distance to detector
+		      double t,                      // Particle time
+		      double t0);                    // Event start time
+
   // Get Beta given particle properties
-  double getBeta(Particle* part);
+  TVector3 getBeta(Particle* part);
 
-  // Get unit vector
-
+  // Get unit vector which points from
+  // the middle of track to detector location.
+  TVector3 getUnitVector(Particle* part,               // Particle
+			 TVector3* detPos);            // Detector position
+  
+  
+  // Get the distance R from midpoint of
+  // the track to the detector position
+  double getR(Particle* part,                        // Paticle
+	      TVector3* detPos);                     // Detector position
+  
+  
 
 };
 
